Quick change on status detail

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="home-container">
 
       <h1>Baptiste OHANES</h1>
-      <h2>Field Engineer - Azure @ <a href="http://microsoft.com">Microsoft</a></h2>  
-      <h3>G33K at times, Husband and father of two</h3>
+      <h2>Field Engineer on Azure @ <a href="http://microsoft.com">Microsoft</a></h2>  
+      <h3>G33K at times, husband and father of two</h3>
 
       <div style="width:160px; margin:auto;">
         <a href="http://twitter.com/baptisteohanes" class="icon-twitter">t</a>
