--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body class="home">
     <div class="row">
-      <div class="span2 pull-right"><a class="link" href="http://blog.baptisteohanes.fr">Blog</a>
+      <div class="span2 pull-right"><a class="link" href="http://baptisteohanes.io">Blog</a>
     </div>
     <div class="home-container">
 
