Profile picture extension change

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="span2 pull-right"><a class="link" href="http://baptisteohanes.io">Blog</a>
     </div>
     <div class="home-container">
-      <img src="/img/author.png" class="rounded-circle text-center index-image">
+      <img src="/img/author.jpg" class="rounded-circle text-center index-image">
       <h1>Baptiste OHANES</h1>
       <h2>Cloud Presales Engineer on Azure @ <a href="http://microsoft.com">Microsoft</a></h2>
       <h3>Former Field Engineer, G33K at times, husband and father of two</h3>
