Adding blog reference

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body class="home">
     <div class="row">
-      <div class="span2 pull-right"><a class="link" href="http://www.jazuregrave.fr">j'AzureGrave !</a>
+      <div class="span2 pull-right"><a class="link" href="http://www.jazuregrave.fr">j'AzureGrave ! - Le blog</a>
     </div>
     <div class="home-container">
       <img src="/img/author.png" class="rounded-circle text-center index-image">
