--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="home-container">
       <img src="/img/author.png" class="rounded-circle text-center index-image">
       <h1>Baptiste OHANES</h1>
-      <h2>Cloud Presales Engineer on Azure @ <a href="http://microsoft.com">Microsoft</a></h2>
-      <h3>Former Field Engineer, G33K at times, husband and father of two</h3>
+      <h2>Cloud Solution Architect on Azure @ <a href="http://microsoft.com">Microsoft</a></h2>
+      <h3>Former Presales Engineer & Field Engineer, G33K at times, husband and father of two</h3>
 
       <div style="width:160px; margin:auto;">
         <a href="http://twitter.com/baptisteohanes" class="icon-twitter">t</a>
